--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "google-charts": "^2.0.0",
     "mongoose": "^6.0.11",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.4",
     "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-google-charts": "^3.0.15",
